--- a/chatgpt/css/style.css
+++ b/chatgpt/css/style.css
@@ -67,6 +67,8 @@
     background-color: #101010;
 }
 .divforuser{
+    bottom: 0;
+    
     padding: 20px;
     display: flex;
     flex-direction: column;
